desk image name rectify

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <img id="functionChart" class="chart" src="img\functionChart.png" alt="integerchart">
     <img id="intChart" class="chart" src="img\integerChart.png" alt="integerchart">
     <img id="stringChart" class="chart" src="img\StringChart.png" alt="stringchart">
-    <img id="desk" class="chart" src="img\desk.gif" alt="desktop">
+    <img id="desk" class="chart" src="img\Desk.gif" alt="desktop">
     <img id="shadow" class="chart" src="img\Shadow.png" alt="shadow">
   </div>
   <script src="js/script.js"></script>
